headers/phonon.h


    /*****************************************************************************************************************/
    /* Data Types                                                                                                    */
    /*****************************************************************************************************************/

    /** \defgroup types Data Types
     *  Common data types used throughout the Phonon API.
     *  \{ */

    typedef void                IPLvoid;            /**< Equivalent to \c void. */

    typedef char                IPLint8;            /**< Signed 8-bit integer. */

    typedef unsigned char       IPLuint8;           /**< Unsigned 8-bit integer. */

    typedef short               IPLint16;           /**< Signed 16-bit integer. */

    typedef unsigned short      IPLuint16;          /**< Unsigned 16-bit integer. */

    typedef int                 IPLint32;           /**< Signed 32-bit integer. */

    typedef unsigned int        IPLuint32;          /**< Unsigned 32-bit integer. */

    typedef long long           IPLint64;           /**< Signed 64-bit integer. */

    typedef unsigned long long  IPLuint64;          /**< Unsigned 64-bit integer. */

    typedef float               IPLfloat32;         /**< Single-precision floating-point number. */

    typedef double              IPLfloat64;         /**< Double-precision floating-point number. */

    typedef unsigned char       IPLbyte;            /**< A single byte. */

    typedef size_t              IPLsize;            /**< Unsigned integer of machine-dependent size. Equivalent to \c size_t. */

    typedef char*               IPLstring;          /**< NULL-terminated string. ASCII or UTF-8 encoding is supported. */


    /** An opaque handle to a Phonon API object. A variable of this type may not be cast to a pointer to any other
      * API type. */
    typedef void*               IPLhandle;


    /** Boolean values. */
    typedef enum {
        IPL_FALSE,  /**< The Boolean value \c false. */
        IPL_TRUE    /**< The Boolean value \c true. */
    } IPLbool;


    /** Status codes returned by Phonon API functions. */
    typedef enum {
        IPL_STATUS_SUCCESS,         /**< The operation completed successfully. */
        IPL_STATUS_FAILURE,         /**< An unspecified error occurred. */
        IPL_STATUS_OUTOFMEMORY,     /**< The system ran out of memory. */
        IPL_STATUS_INITIALIZATION   /**< An error occurred while initializing an external dependency. */
    } IPLerror;


    /** \} */


    /*****************************************************************************************************************/
    /* Context                                                                                                       */
    /*****************************************************************************************************************/

    /** \defgroup context Context
     *  Defines a Context object, which controls low-level operations of Phonon. Typically, a Context is specified
     *  once during the execution of the client program, before calling any other API functions. Once any API function
     *  is called, changing the Context may lead to undefined behavior.
     *  \{
     */

    /** Prototype of a callback that logs a message generated by Phonon. This may be implemented in any suitable way,
     *  such as appending to a log file, displaying a dialog box, etc. The default behavior is to print to \c stdout.
     *
     *  \param  message     The message to log.
     */
    typedef IPLvoid     (*IPLLogFunction)(char* message);


    /** Prototype of a callback that allocates memory. This is usually specified to let Phonon use a custom memory
     *  allocator. The default behavior is to use the OS-dependent aligned version of \c malloc.
     *
     *  \param  size        The number of bytes to allocate.
     *  \param  alignment   The alignment (in bytes) of the start address of the allocated memory.
     *
     *  \return Pointer to the allocated block of memory, or \c NULL if allocation failed.
     */
    typedef IPLvoid*    (*IPLAllocateFunction)(IPLsize, IPLsize);


    /** Prototype of a callback that frees a block of memory. This is usually specified when using a custom memory
     *  allocator with Phonon. The default behavior is to use the OS-dependent aligned version of \c free.
     *
     *  \param  memoryBlock Pointer to the block of memory.
     */
    typedef IPLvoid     (*IPLFreeFunction)(IPLvoid*);


    /** Creates a Context object. A Context object must be created before creating any other API objects.
     *
     *  \param  logCallback         Callback for logging messages. Can be NULL.
     *  \param  allocateCallback    Callback for allocating memory. Can be NULL.
     *  \param  freeCallback        Callback for freeing memory. Can be NULL.
     *  \param  context             [out] Handle to the created Context object.
     *
     *  \return Status code indicating whether or not the operation succeeded.
     */
    IPLAPI IPLerror iplCreateContext(IPLLogFunction logCallback,
                                     IPLAllocateFunction allocateCallback,
                                     IPLFreeFunction freeCallback,
                                     IPLhandle* context);

    
    /** Destroys a Context object. If any other API objects are still referencing the Context object, it will not be
     *  destroyed; destruction occurs when the Context object's reference count reaches zero.
     *
     *  \param  context             [in, out] Address of a handle to the Context object to destroy.
     */
    IPLAPI IPLvoid iplDestroyContext(IPLhandle* context);


    /** Performs last-minute cleanup and finalization. This function must be the last API function to be called before
     *  your application exits.
     */
    IPLAPI IPLvoid iplCleanup();


    /** \} */


    /*****************************************************************************************************************/
    /* Geometry                                                                                                      */
    /*****************************************************************************************************************/

    /** \defgroup geometry Geometry
     *  Geometric data types and helper functions. These structures and functions are used to specify 3D geometric
     *  objects to various functions in the Phonon API.
     *  \{
     */

    /** A point or vector in 3D space. Phonon uses a right-handed coordinate system, with the positive x-axis pointing
     *  right, the positive y-axis pointing up, and the negative z-axis pointing ahead. Position and direction data
     *  obtained from a game engine or audio engine must be properly transformed before being passed to any Phonon API
     *  function.
     */
    typedef struct {
        IPLfloat32 x;   /**< The x-coordinate. */
        IPLfloat32 y;   /**< The y-coordinate. */
        IPLfloat32 z;   /**< The z-coordinate. */
    } IPLVector3;


    /** A unit-length quaternion. Quaternions are used to represent a rotation or orientation.
     */
    typedef struct {
        IPLfloat32 x;   /**< The x-coordinate of the vector part. */
        IPLfloat32 y;   /**< The y-coordinate of the vector part. */
        IPLfloat32 z;   /**< The z-coordinate of the vector part. */
        IPLfloat32 w;   /**< The scalar part. */
    } IPLQuaternion;


    /** An axis-aligned box. Axis-aligned boxes are used to specify a volume of 3D space.
     */
    typedef struct {
        IPLVector3  minCoordinates; /**< The minimum coordinates of any vertex. */
        IPLVector3  maxCoordinates; /**< The maximum coordinates of any vertex. */
    } IPLBox;


    /** An oriented box. Oriented boxes are used to specify a volume of 3D space.
    */
    typedef struct {
        IPLVector3     mCenter;        /**< The center of the box. */
        IPLVector3     mExtents;       /**< The extents of the box. */
        IPLQuaternion  mRotation;      /**< The rotation of the box. */
    } IPLOrientedBox;


    /** A sphere. Spheres are used to define a region of influence around a point.
     */
    typedef struct {
        IPLVector3  center; /**< The center. */
        IPLfloat32  radius; /**< The radius. */
    } IPLSphere;