src/bindgen.rs

/* automatically generated by rust-bindgen */

pub type wchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::std::os::raw::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: f64,
}
#[test]
fn bindgen_test_layout_max_align_t() {
    assert_eq!(
        ::std::mem::size_of::<max_align_t>(),
        32usize,
        concat!("Size of: ", stringify!(max_align_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<max_align_t>())).__clang_max_align_nonce1 as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce1)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<max_align_t>())).__clang_max_align_nonce2 as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce2)
        )
    );
}
/// \defgroup types Data Types
/// Common data types used throughout the Phonon API.
/// \{
pub type IPLvoid = ::std::os::raw::c_void;
pub type IPLint8 = ::std::os::raw::c_char;
pub type IPLuint8 = ::std::os::raw::c_uchar;
pub type IPLint16 = ::std::os::raw::c_short;
pub type IPLuint16 = ::std::os::raw::c_ushort;
pub type IPLint32 = ::std::os::raw::c_int;
pub type IPLuint32 = ::std::os::raw::c_uint;
pub type IPLint64 = ::std::os::raw::c_longlong;
pub type IPLuint64 = ::std::os::raw::c_ulonglong;
pub type IPLfloat32 = f32;
pub type IPLfloat64 = f64;
pub type IPLbyte = ::std::os::raw::c_uchar;
pub type IPLsize = usize;
pub type IPLstring = *mut ::std::os::raw::c_char;
/// An opaque handle to a Phonon API object. A variable of this type may not be cast to a pointer to any other
/// API type.
pub type IPLhandle = *mut ::std::os::raw::c_void;
pub const IPLbool_IPL_FALSE: IPLbool = 0;
pub const IPLbool_IPL_TRUE: IPLbool = 1;
pub type IPLbool = u32;
pub const IPLerror_IPL_STATUS_SUCCESS: IPLerror = 0;
pub const IPLerror_IPL_STATUS_FAILURE: IPLerror = 1;
pub const IPLerror_IPL_STATUS_OUTOFMEMORY: IPLerror = 2;
pub const IPLerror_IPL_STATUS_INITIALIZATION: IPLerror = 3;
pub type IPLerror = u32;
/// Prototype of a callback that logs a message generated by Phonon. This may be implemented in any suitable way,
/// such as appending to a log file, displaying a dialog box, etc. The default behavior is to print to \c stdout.
///
/// \param  message     The message to log.
pub type IPLLogFunction =
    ::std::option::Option<unsafe extern "C" fn(message: *mut ::std::os::raw::c_char) -> IPLvoid>;
/// Prototype of a callback that allocates memory. This is usually specified to let Phonon use a custom memory
/// allocator. The default behavior is to use the OS-dependent aligned version of \c malloc.
///
/// \param  size        The number of bytes to allocate.
/// \param  alignment   The alignment (in bytes) of the start address of the allocated memory.
///
/// \return Pointer to the allocated block of memory, or \c NULL if allocation failed.
pub type IPLAllocateFunction = ::std::option::Option<
    unsafe extern "C" fn(arg1: IPLsize,
                         arg2: IPLsize)
                         -> *mut IPLvoid,
>;
/// Prototype of a callback that frees a block of memory. This is usually specified when using a custom memory
/// allocator with Phonon. The default behavior is to use the OS-dependent aligned version of \c free.
///
/// \param  memoryBlock Pointer to the block of memory.
pub type IPLFreeFunction = ::std::option::Option<
    unsafe extern "C" fn(arg1: *mut IPLvoid) -> IPLvoid,
>;
extern "C" {
    /// Creates a Context object. A Context object must be created before creating any other API objects.
    ///
    /// \param  logCallback         Callback for logging messages. Can be NULL.
    /// \param  allocateCallback    Callback for allocating memory. Can be NULL.
    /// \param  freeCallback        Callback for freeing memory. Can be NULL.
    /// \param  context             [out] Handle to the created Context object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateContext(
        logCallback: IPLLogFunction,
        allocateCallback: IPLAllocateFunction,
        freeCallback: IPLFreeFunction,
        context: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys a Context object. If any other API objects are still referencing the Context object, it will not be
    /// destroyed; destruction occurs when the Context object's reference count reaches zero.
    ///
    /// \param  context             [in, out] Address of a handle to the Context object to destroy.
    pub fn iplDestroyContext(context: *mut IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Performs last-minute cleanup and finalization. This function must be the last API function to be called before
    /// your application exits.
    pub fn iplCleanup() -> IPLvoid;
}
/// A point or vector in 3D space. Phonon uses a right-handed coordinate system, with the positive x-axis pointing
/// right, the positive y-axis pointing up, and the negative z-axis pointing ahead. Position and direction data
/// obtained from a game engine or audio engine must be properly transformed before being passed to any Phonon API
/// function.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLVector3 {
    /// < The x-coordinate.
    pub x: IPLfloat32,
    /// < The y-coordinate.
    pub y: IPLfloat32,
    /// < The z-coordinate.
    pub z: IPLfloat32,
}
#[test]
fn bindgen_test_layout_IPLVector3() {
    assert_eq!(
        ::std::mem::size_of::<IPLVector3>(),
        12usize,
        concat!("Size of: ", stringify!(IPLVector3))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLVector3>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLVector3))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLVector3>())).x as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLVector3),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLVector3>())).y as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLVector3),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLVector3>())).z as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLVector3),
            "::",
            stringify!(z)
        )
    );
}
/// A unit-length quaternion. Quaternions are used to represent a rotation or orientation.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLQuaternion {
    /// < The x-coordinate of the vector part.
    pub x: IPLfloat32,
    /// < The y-coordinate of the vector part.
    pub y: IPLfloat32,
    /// < The z-coordinate of the vector part.
    pub z: IPLfloat32,
    /// < The scalar part.
    pub w: IPLfloat32,
}
#[test]
fn bindgen_test_layout_IPLQuaternion() {
    assert_eq!(
        ::std::mem::size_of::<IPLQuaternion>(),
        16usize,
        concat!("Size of: ", stringify!(IPLQuaternion))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLQuaternion>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLQuaternion))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLQuaternion>())).x as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLQuaternion),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLQuaternion>())).y as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLQuaternion),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLQuaternion>())).z as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLQuaternion),
            "::",
            stringify!(z)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLQuaternion>())).w as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLQuaternion),
            "::",
            stringify!(w)
        )
    );
}
/// An axis-aligned box. Axis-aligned boxes are used to specify a volume of 3D space.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLBox {
    /// < The minimum coordinates of any vertex.
    pub minCoordinates: IPLVector3,
    /// < The maximum coordinates of any vertex.
    pub maxCoordinates: IPLVector3,
}
#[test]
fn bindgen_test_layout_IPLBox() {
    assert_eq!(
        ::std::mem::size_of::<IPLBox>(),
        24usize,
        concat!("Size of: ", stringify!(IPLBox))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLBox>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLBox))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLBox>())).minCoordinates as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLBox),
            "::",
            stringify!(minCoordinates)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLBox>())).maxCoordinates as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLBox),
            "::",
            stringify!(maxCoordinates)
        )
    );
}
/// An oriented box. Oriented boxes are used to specify a volume of 3D space.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLOrientedBox {
    /// < The center of the box.
    pub mCenter: IPLVector3,
    /// < The extents of the box.
    pub mExtents: IPLVector3,
    /// < The rotation of the box.
    pub mRotation: IPLQuaternion,
}
#[test]
fn bindgen_test_layout_IPLOrientedBox() {
    assert_eq!(
        ::std::mem::size_of::<IPLOrientedBox>(),
        40usize,
        concat!("Size of: ", stringify!(IPLOrientedBox))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLOrientedBox>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLOrientedBox))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLOrientedBox>())).mCenter as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLOrientedBox),
            "::",
            stringify!(mCenter)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLOrientedBox>())).mExtents as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLOrientedBox),
            "::",
            stringify!(mExtents)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLOrientedBox>())).mRotation as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLOrientedBox),
            "::",
            stringify!(mRotation)
        )
    );
}
/// A sphere. Spheres are used to define a region of influence around a point.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLSphere {
    /// < The center.
    pub center: IPLVector3,
    /// < The radius.
    pub radius: IPLfloat32,
}
